# worksim-ai

./: .dockerignore  Dockerfile  README.md  app.py  code_review_task.py  data_clean_task.py  email_task.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  run_env.py  tasks.py
